--- a/maybe_finance/Dockerfile
+++ b/maybe_finance/Dockerfile
@@ -13,7 +13,7 @@ FROM --platform=${BUILD_ARCH} ruby:3.4.1-slim AS base
 # Install base packages
 RUN apt-get update -qq && \
     apt-get install --no-install-recommends -y \
-    curl libvips postgresql-client jq bash && \
+    curl libvips postgresql-client jq bash build-essential git libpq-dev pkg-config && \
     rm -rf /var/lib/apt/lists/*
 
 # Set production environment
@@ -23,24 +23,11 @@ ENV RAILS_ENV="production" \
     BUNDLE_WITHOUT="development"
 
 WORKDIR /rails
-COPY --from=clone /src /rails
 
-# -------------------------------------------------
-# Stage 3: Build stage
-FROM base AS build
-
-# Install build dependencies
-RUN apt-get update -qq && \
-    apt-get install --no-install-recommends -y \
-    curl libvips postgresql-client jq bash build-essential git libpq-dev pkg-config && \
-    rm -rf /var/lib/apt/lists/*
 
 # Instead of copying from the build context, copy Gemfile and Gemfile.lock from the clone stage
 COPY --from=clone /src/Gemfile /rails/Gemfile
 COPY --from=clone /src/Gemfile.lock /rails/Gemfile.lock
-
-
-WORKDIR /rails
 
 # Install gems
 RUN bundle install
@@ -48,6 +35,18 @@ RUN rm -rf ~/.bundle/ "${BUNDLE_PATH}"/ruby/*/cache "${BUNDLE_PATH}"/ruby/*/bund
 RUN bundle exec bootsnap precompile --gemfile -j 0
 
 
+# -------------------------------------------------
+# Stage 3: Build stage
+FROM base AS build
+
+WORKDIR /rails
+COPY --from=clone /src /rails
+
+# Install build dependencies
+#RUN apt-get update -qq && \
+#    apt-get install --no-install-recommends -y \
+#    curl libvips postgresql-client jq bash build-essential git libpq-dev pkg-config && \
+#    rm -rf /var/lib/apt/lists/*
 
 # Precompile bootsnap and assets
 #RUN bundle exec bootsnap precompile -j 0 app/ lib/
@@ -62,14 +61,11 @@ FROM base
 RUN rm -rf /var/lib/apt/lists /var/cache/apt/archives
 
 # Copy built artifacts: gems, application
-COPY --from=build /usr/local/bundle /usr/local/bundle
 COPY --from=build /rails /rails
 
 # Copy startup script
 COPY run.sh /usr/local/bin/run.sh
 RUN chmod +x /usr/local/bin/run.sh
-
-# Keep running as root (no user switch)
 
 # Entrypoint prepares the database.
 ENTRYPOINT ["/usr/local/bin/run.sh"]
