--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -16,6 +16,22 @@ jobs:
     steps:
       - name: Checkout the repository
         uses: actions/checkout@v3
+
+        # Enable Ruby Cache: Store Bundler gems between builds
+      - name: Cache Bundler Gems
+        uses: actions/cache@v3
+        with:
+          path: /usr/local/bundle
+          key: ${{ runner.os }}-bundler-${{ hashFiles('**/Gemfile.lock') }}
+          restore-keys: |
+            ${{ runner.os }}-bundler-
+
+      # ✅ Pre-install Bundler gems outside of Docker to use cache
+      - name: Install Bundler Dependencies
+        run: |
+          bundle config set path '/usr/local/bundle'
+          bundle install
+
       - name: Test build
         uses: home-assistant/builder@master
         with:
