--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,26 +1,40 @@
-name: "Test"
+name: "Test Build"
 
-on: [pull_request]
+on:
+  push:
+    branches:
+      - main
+  pull_request:
 
 jobs:
-  build:
-    name: Test build (${{ matrix.arch }})
-    runs-on: ubuntu-latest
+  test-build:
+    name: Test Build
     strategy:
-      fail-fast: false # Prevents cancellation of remaining jobs if one fails
       matrix:
-        arch: [amd64, aarch64]
-        #armv7,
-        #i386
-        #armhf,
+        architecture: [amd64, aarch64]
+    runs-on: ${{ (matrix.architecture == 'amd64' && 'ubuntu-latest') || (matrix.architecture == 'aarch64' && 'ubuntu-22.04-arm') }}
     steps:
-      - name: Checkout the repository
+      - name: Checkout repository
         uses: actions/checkout@v3
-      - name: Test build
-        uses: home-assistant/builder@master
+
+      - name: Log in to GitHub Container Registry
+        uses: docker/login-action@v2
         with:
-          args: |
-            --test \
-            --${{ matrix.arch }} \
-            --target maybe_finance \
-            --docker-hub "ghcr.io/${{ github.repository_owner }}" \
+          registry: ghcr.io
+          username: ${{ github.repository_owner }}
+          password: ${{ secrets.GITHUB_TOKEN }}
+
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v2
+
+      - name: Build Docker image (test only)
+        run: |
+          IMAGE_NAME=ghcr.io/${{ github.repository_owner }}/${{ matrix.architecture }}-maybe_finance_homeassistant
+          CACHE_IMAGE=ghcr.io/${{ github.repository_owner }}/cache-${{ matrix.architecture }}-maybe_finance_homeassistant
+
+          docker buildx build \
+            --platform linux/${{ matrix.architecture }} \
+            --build-arg BUILD_ARCH=${{ matrix.architecture }} \
+            --cache-from=type=registry,ref=$CACHE_IMAGE \
+            --cache-to=type=registry,ref=$CACHE_IMAGE,mode=max \
+            -f maybe_finance/Dockerfile .
