--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -29,8 +29,8 @@ jobs:
 
       - name: Build Docker image (test only)
         run: |
-          IMAGE_NAME=ghcr.io/${{ github.repository_owner }}/${{ matrix.architecture }}-maybe_finance_homeassistant
-          CACHE_IMAGE=ghcr.io/${{ github.repository_owner }}/cache-${{ matrix.architecture }}-maybe_finance_homeassistant
+          IMAGE_NAME=ghcr.io/m123-dev/${{ matrix.architecture }}-maybe_finance_homeassistant
+          CACHE_IMAGE=ghcr.io/m123-dev/cache-${{ matrix.architecture }}-maybe_finance_homeassistant
 
           docker buildx build \
             --platform linux/${{ matrix.architecture }} \
