--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -36,6 +36,7 @@ jobs:
           docker buildx build \
             --platform linux/${{ matrix.architecture }} \
             --build-arg BUILD_ARCH=${{ matrix.architecture }} \
-            --cache-from=type=registry,ref=$CACHE_IMAGE \
-            --cache-to=type=registry,ref=$CACHE_IMAGE,mode=max \
             -f maybe_finance/Dockerfile .
+
+#             --cache-from=type=registry,ref=$CACHE_IMAGE \
+#--cache-to=type=registry,ref=$CACHE_IMAGE,mode=max \
