--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -1,34 +1,48 @@
 name: "Publish"
-
 on:
   release:
     types: [published]
 
 jobs:
   publish:
-    name: Publish
-    runs-on: ubuntu-latest
+    name: Build and Push to GHCR
     strategy:
+      fail-fast: false
       matrix:
         architecture: [amd64, aarch64]
-        #i386
-        #armv7,
-        #armhf,
-    steps:
-      - name: Checkout the repository
-        uses: actions/checkout@v3
+    runs-on: ${{ (matrix.architecture == 'amd64' && 'ubuntu-latest') || (matrix.architecture == 'aarch64' && 'ubuntu-22.04-arm') }}
 
-      - name: Login to the Github container registry
+    steps:
+      - name: Checkout Repository
+        uses: actions/checkout@v4
+
+      - name: Extract Version from Config
+        id: extract_version
+        run: |
+          VERSION=$(grep '^version:' maybe_finance/config.yaml | awk '{print $2}')
+          echo "VERSION=$VERSION" >> $GITHUB_ENV
+
+      - name: Log in to GitHub Container Registry
         uses: docker/login-action@v2
         with:
           registry: ghcr.io
           username: ${{ github.repository_owner }}
-          password: ${{ secrets.MAYBE_HASS_RELEASE }}
+          password: ${{ secrets.GITHUB_TOKEN }}
 
-      - name: Build & Publish
-        uses: home-assistant/builder@master
-        with:
-          args: |
-            --${{ matrix.architecture }} \
-            --target maybe_finance \
-            --docker-hub "ghcr.io/${{ github.repository_owner }}"
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v2
+
+      - name: Build and Push Docker Image
+        run: |
+          cd maybe_finance
+          IMAGE_NAME=ghcr.io/m123-dev/${{ matrix.architecture }}-maybe_finance_homeassistant:${{ env.VERSION }}
+
+          docker buildx build \
+            --platform linux/${{ matrix.architecture }} \
+            --build-arg BUILD_ARCH=${{ matrix.architecture }} \
+            -t $IMAGE_NAME . \
+            --push
+
+      - name: Logout from GitHub Container Registry
+        run: |
+          docker logout ghcr.io
