--- a/maybe_finance/config.yaml
+++ b/maybe_finance/config.yaml
@@ -34,6 +34,7 @@ schema:
   rails_force_ssl: bool
   rails_assume_ssl: bool
   good_job_execution_mode: str
+  require_invite_code: bool
 options:
   postgres_password: "homeassistant"
   secret_key_base: "generate_a_secure_key_here"
@@ -45,6 +46,7 @@ options:
   rails_force_ssl: false
   rails_assume_ssl: false
   good_job_execution_mode: "async"
+  require_invite_code: true
 version: 0.4.1
 #build:
 #  dockerfile: Dockerfile
