--- a/.github/workflows/auto-update.yaml
+++ b/.github/workflows/auto-update.yaml
@@ -69,6 +69,6 @@ jobs:
         if: steps.cpr.outputs.pull-request-operation == 'created'
         uses: peter-evans/enable-pull-request-automerge@v3
         with:
-          token: ${{ secrets.PAT }}
+          token: ${{ secrets.MAYBE_HASS_RELEASE }}
           pull-request-number: ${{ steps.cpr.outputs.pull-request-number }}
           merge-method: squash
