--- a/maybe_finance/config.yaml
+++ b/maybe_finance/config.yaml
@@ -21,12 +21,14 @@ ports:
 map:
   - "data:rw"
 schema:
+  postgres_user: str?
   postgres_password: str
+  postgres_db: str?
   secret_key_base: str
   db_host: str?
   db_port: str?
-  postgres_user: str?
-  #app_domain: str
+  redis_url: str?
+  # app_domain: str
   plaid_client_id: str?
   plaid_secret: str?
   plaid_env: str?
@@ -35,19 +37,23 @@ schema:
   rails_assume_ssl: bool
   good_job_execution_mode: str
   require_invite_code: bool
+  openai_access_token: str?
 options:
+  postgres_user: "postgres"
   postgres_password: "homeassistant"
+  postgres_db: "postgres"
   secret_key_base: "generate_a_secure_key_here"
   db_host: "172.30.32.1"
   db_port: "5432"
-  postgres_user: "postgres"
+  #redis_url: "redis://redis:6379/1"
+  redis_url: "redis://172.30.32.1:6379/1"
   #  app_domain: "http://localhost"
   self_hosted: true
   rails_force_ssl: false
   rails_assume_ssl: false
   good_job_execution_mode: "async"
   require_invite_code: true
-version: 0.4.25
+version: 0.5.0
 #build:
 #  dockerfile: Dockerfile
 #  args:
