--- a/repository.yaml
+++ b/repository.yaml
@@ -1,3 +1,3 @@
 name: Maybe
-url: https://github.com/M123-dev/maybe_finance_hass
-maintainer: M123
+url: https://github.com/centralchaos/maybe_finance_hass
+maintainer: Centralchaos
