--- a/maybe_finance/config.yaml
+++ b/maybe_finance/config.yaml
@@ -8,10 +8,14 @@ arch:
   - armhf
   - aarch64
   - amd64
+#  - armv7
+#  - i386
 startup: application
 boot: auto
+#ingress: true
+#ingress_port: 3000
 webui: "[PROTO:rails_force_ssl]://[HOST]:[PORT:3000]"
-url: https://github.com/centralchaos/maybe_finance_hass
+url: https://github.com/M123-dev/maybe_finance_hass
 ports:
   3000/tcp: 1234
 map:
@@ -24,6 +28,7 @@ schema:
   db_host: str?
   db_port: str?
   redis_url: str?
+  # app_domain: str
   plaid_client_id: str?
   plaid_secret: str?
   plaid_env: str?
@@ -40,11 +45,23 @@ options:
   secret_key_base: "generate_a_secure_key_here"
   db_host: "172.30.32.1"
   db_port: "5432"
+  #redis_url: "redis://redis:6379/1"
   redis_url: "redis://3b88f413-redis:6379"
+  #  app_domain: "http://localhost"
   self_hosted: true
   rails_force_ssl: false
   rails_assume_ssl: false
   good_job_execution_mode: "async"
   require_invite_code: true
 version: 0.5.7
-image: ghcr.io/centralchaos/ke-maybe-hass:latest
+#build:
+#  dockerfile: Dockerfile
+#  args:
+#    BUILD_ARCH: "{arch}"
+image: ghcr.io/m123-dev/{arch}-maybe_finance_homeassistant
+#build_from:
+#  armv7: "ghcr.io/home-assistant/armv7-base:latest"
+#  amd64: "ghcr.io/home-assistant/amd64-base:latest"
+#  armhf: "ghcr.io/home-assistant/armhf-base:latest"
+#  aarch64: "ghcr.io/home-assistant/aarch64-base:latest"
+#  i386: "ghcr.io/home-assistant/i386-base:latest"
